--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -54,3 +54,37 @@
 .person-resume:hover{
     border-color: #00ff00;
 }
+@media(max-width:768px){
+    .person{
+        align-items: center;
+    }
+    .person img{
+        margin-top: 120px;
+        width: 260px;
+    }
+    .person h1{
+        margin-top: 50px;
+        width: 90%;
+        font-size: 45px;
+    }
+    .person p{
+        width: 60%;
+        font-size: 18px;
+        line-height: 28px;
+        margin: 10px 0px;
+    }
+    .person-action{
+        gap: 16px;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 50px;
+    }
+    .person-connect{
+        padding: 20px 30px;
+        border-radius: 40px;
+    }
+    .person-resume{
+        padding: 20px 50px;
+        border-radius: 40px;
+    }
+}
