--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -59,3 +59,29 @@
     gap: 20px;
     transition: 0.6s;
 }
+
+@media(max-width: 768px){
+    .projects{
+        gap: 50px;
+        margin: 50px 70px;
+        align-items: center;
+    }
+    .projects-title h1{
+        font-size: 50px;
+        font-weight: 600;
+    }
+    .projects-container{
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+    }
+    .projects-container img{
+        width: 100%;
+        height: 100%;
+    }
+    .projects-showMore{
+        padding: 20px 40px;
+        font-size: 18px;
+        margin: 30px auto;
+        cursor: pointer;
+    }
+}
