--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -54,6 +54,21 @@
 .person-resume:hover{
     border-color: #00ff00;
 }
+.blinking-cursor {
+    font-weight: 100;
+    font-size: 40px;
+    color: white;
+    animation: blink 1s infinite;
+}
+
+@keyframes blink {
+    0%   { opacity: 1; }
+    50%  { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+
+
 @media(max-width:768px){
     .person{
         align-items: center;
