--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -156,3 +156,90 @@
         padding: 15px 40px;
     }
 }
+
+@media (max-width: 480px) {
+    .contact {
+        margin: 30px 20px;
+        gap: 40px;
+    }
+    .contact-title h1 {
+        font-size: 36px;
+        margin-top: 30px;
+        padding: 0 10px;
+        text-align: center;
+    }
+    .contact-title {
+        position: relative;
+    }
+    .contact-title img {
+        position: absolute;
+        top: 25px;
+        left: -30px;
+        bottom: 0;
+        width: 40px;
+        height: auto;
+        transform: translate(-20%, 20%);
+    }
+    .contact-section {
+        flex-direction: column;
+        gap: 40px;
+        width: 100%;
+    }
+    .contact-left {
+        align-items: center;
+        text-align: center;
+    }
+    .contact-left h1 {
+        font-size: 28px;
+    }
+    .contact-left p {
+        font-size: 16px;
+        line-height: 28px;
+        max-width: 100%;
+        padding: 0 10px;
+    }
+    .contact-details {
+        font-size: 16px;
+        gap: 15px;
+        align-items: center;
+        justify-content: center;
+    }
+    .contact-detail {
+        gap: 15px;
+        justify-content: center;
+    }
+    .contact-detail img {
+        width: 20px;
+        height: 20px;
+    }
+    .contact-right {
+        width: 100%;
+        gap: 15px;
+        align-items: stretch;
+    }
+    .contact-right label {
+        font-size: 16px;
+    }
+    .contact-right input,
+    .contact-right textarea {
+        font-size: 16px;
+        padding-left: 15px;
+        height: 45px;
+    }
+    .contact-right textarea {
+        padding-top: 10px;
+    }
+    .contact-submit {
+        font-size: 18px;
+        padding: 15px;
+        height: 45px;
+        margin-bottom: 30px;
+        width: 100%;
+    }
+    .submit-wrapper {
+        width: 100%;
+    }
+    .sent-message {
+        font-size: 14px;
+    }
+}
