--- a/src/Components/Person/Person.css
+++ b/src/Components/Person/Person.css
@@ -67,8 +67,6 @@
     100% { opacity: 1; }
 }
 
-
-
 @media(max-width:768px){
     .person{
         align-items: center;
@@ -101,5 +99,41 @@
     .person-resume{
         padding: 20px 50px;
         border-radius: 40px;
+    }
+}
+@media (max-width: 480px) {
+    .person img {
+        width: 180px;
+        margin-top: 100px;
+    }
+
+    .person h1 {
+        font-size: 32px;
+        width: 90%;
+    }
+
+    .person p {
+        width: 85%;
+        font-size: 16px;
+        line-height: 26px;
+        text-align: justify;
+    }
+
+    .person-action {
+        flex-direction: column;
+        gap: 12px;
+        margin-top: 10px;
+    }
+
+    .person-connect,
+    .person-resume {
+        width: 80%;
+        text-align: center;
+        padding: 16px;
+        font-size: 16px;
+    }
+
+    .blinking-cursor {
+        font-size: 32px;
     }
 }
