--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,27 +1,32 @@
-.footer{
+.footer {
     margin: 50px 170px;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.footer-top{
+
+.footer-top {
     display: flex;
     justify-content: space-between;
 }
-.footer-top-left p{
+
+.footer-top-left p {
     font-size: 20px;
     max-width: 500px;
 }
-.footer-top-left img{
+
+.footer-top-left img {
     width: 40%;
     height: auto;
 }
-.footer-top-right{
+
+.footer-top-right {
     display: flex;
     align-items: center;
     gap: 20px;
 }
-.footer-email-input{
+
+.footer-email-input {
     display: flex;
     gap: 30px;
     padding: 20px 30px;
@@ -29,7 +34,8 @@
     background: #282c34;
     padding-right: 80px;
 }
-.footer-email-input input{
+
+.footer-email-input input {
     outline: none;
     border: none;
     background: transparent;
@@ -37,35 +43,185 @@
     font-family: "outfit", sans-serif;
     font-size: 20px;
 }
-.footer-bottom{
+
+.footer-bottom {
     display: flex;
     justify-content: space-between;
     font-size: 20px;
 }
-.footer-bottom-right{
+
+.footer-bottom-right {
     display: flex;
     gap: 20px;
     margin-bottom: 50px;
 }
-.footer-email-input:hover{
+
+.footer-email-input:hover {
     border: 2px solid #fff;
 }
 
-@media(max-width: 768px){
-    .footer{
-        margin: 50px 70px;
-    }
-    .footer-top{
-        flex-direction: column;
+/* Large screens (widescreens, 1440px ve üzeri) */
+@media (min-width: 1440px) {
+    .footer {
+        margin: 70px 250px;
         gap: 30px;
     }
-    .footer-bottom{
-        display: flex;
-        flex-direction: column-reverse;
-        margin-bottom: 50px;
+    .footer-top-left p {
+        font-size: 22px;
+        max-width: 600px;
+    }
+    .footer-top-left img {
+        width: 45%;
+    }
+    .footer-email-input {
+        padding: 25px 40px;
+        gap: 35px;
+        padding-right: 100px;
+    }
+    .footer-email-input input {
+        font-size: 22px;
+    }
+    .footer-bottom {
+        font-size: 22px;
+    }
+    .footer-bottom-right {
+        gap: 25px;
+        margin-bottom: 60px;
+    }
+}
+
+/* Desktop screens (1024px - 1439px) */
+@media (max-width: 1439px) and (min-width: 1024px) {
+    .footer {
+        margin: 50px 120px;
+        gap: 25px;
+    }
+    .footer-top-left p {
+        font-size: 19px;
+        max-width: 500px;
+    }
+    .footer-top-left img {
+        width: 45%;
+    }
+    .footer-email-input {
+        padding: 22px 35px;
+        gap: 30px;
+        padding-right: 90px;
+    }
+    .footer-email-input input {
+        font-size: 19px;
+    }
+    .footer-bottom {
+        font-size: 19px;
+    }
+    .footer-bottom-right {
+        gap: 22px;
+        margin-bottom: 55px;
+    }
+}
+
+/* Tablets (769px - 1023px) */
+@media (max-width: 1023px) and (min-width: 769px) {
+    .footer {
+        margin: 50px 100px;
+        gap: 20px;
     }
 
+    .footer-top {
+        flex-direction: column;
+        gap: 40px;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer-top-left p {
+        font-size: 18px;
+        max-width: 90%;
+    }
+
+    .footer-top-left img {
+        width: 50%;
+    }
+
+    .footer-top-right {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer-email-input {
+        padding: 18px 25px;
+        gap: 20px;
+        padding-right: 60px;
+    }
+
+    .footer-email-input input {
+        font-size: 18px;
+    }
+
+    .footer-bottom {
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+        gap: 10px;
+        font-size: 18px;
+    }
+
+    .footer-bottom-right {
+        gap: 18px;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
 }
+
+/* Small tablets & large phones (481px - 768px) */
+@media (max-width: 768px) and (min-width: 481px) {
+    .footer {
+        margin: 40px 50px;
+        gap: 20px;
+    }
+    .footer-top {
+        flex-direction: column;
+        gap: 30px;
+        align-items: center;
+        text-align: center;
+    }
+    .footer-top-left p {
+        font-size: 17px;
+        max-width: 95%;
+    }
+    .footer-top-left img {
+        width: 55%;
+    }
+    .footer-top-right {
+        flex-direction: column;
+        gap: 15px;
+    }
+    .footer-email-input {
+        padding: 18px 25px;
+        gap: 20px;
+        padding-right: 50px;
+        border-radius: 30px;
+    }
+    .footer-email-input input {
+        font-size: 17px;
+    }
+    .footer-bottom {
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+        gap: 15px;
+        font-size: 17px;
+        margin-bottom: 40px;
+    }
+    .footer-bottom-right {
+        gap: 15px;
+        justify-content: center;
+        margin-bottom: 20px;
+        flex-wrap: wrap;
+    }
+}
+
+/* Small phones (up to 480px) */
 @media (max-width: 480px) {
     .footer {
         margin: 30px 20px;
@@ -129,54 +285,24 @@
     }
 }
 
-@media (max-width: 1024px) and (min-width: 769px) {
+/* Extra small devices (up to 320px) */
+@media (max-width: 320px) {
     .footer {
-        margin: 50px 100px;
+        margin: 20px 10px;
         gap: 20px;
-    }
-
-    .footer-top {
-        flex-direction: column;
-        gap: 40px;
-        align-items: center;
-        text-align: center;
     }
 
     .footer-top-left p {
-        font-size: 18px;
-        max-width: 90%;
-    }
-
-    .footer-top-left img {
-        width: 50%;
-    }
-
-    .footer-top-right {
-        flex-direction: column;
-        gap: 20px;
-    }
-
-    .footer-email-input {
-        padding: 18px 25px;
-        gap: 20px;
-        padding-right: 60px;
+        font-size: 14px;
+        line-height: 22px;
     }
 
     .footer-email-input input {
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .footer-bottom {
-        flex-direction: column-reverse;
-        align-items: center;
-        text-align: center;
-        gap: 10px;
-        font-size: 18px;
-    }
-
-    .footer-bottom-right {
-        gap: 18px;
-        justify-content: center;
-        margin-bottom: 30px;
+        font-size: 14px;
+        margin-bottom: 20px;
     }
 }
